--- a/web/Front/MainTemplete_Logeado.xhtml
+++ b/web/Front/MainTemplete_Logeado.xhtml
@@ -104,7 +104,7 @@
                                                     </div>
                                                     <p:autoComplete id="acGral" value="#{ofertaBean.ofertaSearchString}" 
                                                                     completeMethod="#{ofertaBean.buscarOferta}" 
-                                                                    minQueryLength="3" size="55" effect="blind" styleClass="form-control">
+                                                                    minQueryLength="3" size="65" effect="blind" >
                                                         <p:ajax event="itemSelect"
                                                                 listener="#{ofertaBean.verOferta()}" />
                                                     </p:autoComplete> 
