--- a/web/Front/Como_Funciona.xhtml
+++ b/web/Front/Como_Funciona.xhtml
@@ -13,7 +13,7 @@
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
                     <div class="mj_mainheading mj_toppadder80 mj_bottompadder50">
                         <h1>Como Funciona</h1>
-                        <p>En metrópolis queremos que todo sea más fácil para ti, pulsa en cada uno de nuestros tutoriales para hacer de esta plataforma una herramienta de trabajo completa. </p>
+                        <p>En Metrópolis queremos que todo sea más fácil para ti, pulsa en cada uno de nuestros tutoriales para hacer de esta plataforma la herramienta idónea. </p>
                     </div>
                 </div>
             </div>
