--- a/web/Front/modificarPerfil.xhtml
+++ b/web/Front/modificarPerfil.xhtml
@@ -66,7 +66,9 @@
 
                                         <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-1">
 
-
+                                            <p:commandButton action="Perfil_Preview.xhtml" icon="ui-icon-zoomin" value="Como me ven?" />
+                                                                                                
+                                            
                                             <div class="mj_mainheading " >
                                                 <h2><span>Modificar Cuenta</span></h2>
                                             </div>
