--- a/web/Backend/MainTemplete_Logeado.xhtml
+++ b/web/Backend/MainTemplete_Logeado.xhtml
@@ -64,6 +64,8 @@
                                         </li>
                                         <li><a href="../Backend/categoria.xhtml">Categorias</a>
                                         </li>
+                                        <li><a href="../Backend/Servicios.xhtml">Servicios</a>
+                                        </li>
                                         <li><a href="../Backend/etiqueta.xhtml">Etiquetas</a>
                                         </li>
                                         <li><a href="../Backend/jornada.xhtml">Jornadas</a>
