--- a/web/Front/MainTemplete.xhtml
+++ b/web/Front/MainTemplete.xhtml
@@ -183,15 +183,15 @@
                         <div class="mj_weight mj_bottompadder20">
                             <div class="mj_sociallink">
                                 <ul>
-                                    <li><a href="https://www.facebook.com/metropolis.com.co/"><i class="fa fa-facebook"></i></a>
+                                    <li><a href="https://www.facebook.com/metropolis.com.co/" target="_blank"><i class="fa fa-facebook"></i></a>
                                     </li>
-                                    <li><a href="https://twitter.com/Metropoliscomco"><i class="fa fa-twitter"></i></a>
+                                    <li><a href="https://twitter.com/Metropoliscomco" target="_blank"><i class="fa fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="https://www.instagram.com/metropolis.com.co/"><i class="fa fa-instagram"></i></a>
+                                    <li><a href="https://www.instagram.com/metropolis.com.co/" target="_blank"><i class="fa fa-instagram"></i></a>
                                     </li>
-                                    <li><a href="https://plus.google.com/u/0/104979137840229529597"><i class="fa fa-google-plus"></i></a>
+                                    <li><a href="https://plus.google.com/u/0/104979137840229529597" target="_blank"><i class="fa fa-google-plus"></i></a>
                                     </li>
-                                    <li><a href="https://www.linkedin.com/company/metropolis.com.co"><i class="fa fa-linkedin"></i></a>
+                                    <li><a href="https://www.linkedin.com/company/metropolis.com.co" target="_blank"><i class="fa fa-linkedin"></i></a>
                                     </li>
                                 </ul>
                             </div>
