--- a/web/Front/Como_Contratar.xhtml
+++ b/web/Front/Como_Contratar.xhtml
@@ -27,7 +27,7 @@
                                 <div class="mj_articleoverlay"> </div>
                             </div>
                             <div class="mj_articledata">
-                                <p>En la barra principal ubica la lupa (buscar) o en la lista de trabajos y servicios destacados.</p>
+                                <p>En la barra principal ubica la lupa (buscar) o en la lista de servicios o aliados destacados.</p>
                                 <a href="#"><i class="fa fa-angle-right"></i></a> </div>
           </div>
                   </div>
@@ -37,7 +37,7 @@
                                 <div class="mj_articleoverlay"> </div>
                             </div>
                             <div class="mj_articledata">
-                                <p>Puedes buscar por palabras claves (profesiones u oficios) o en el menú trabajos.</p>
+                                <p>Puedes buscar por palabras claves (profesiones u oficios) o en el menú servicios.</p>
                                 <a href="#"><i class="fa fa-angle-right"></i></a> </div>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                                 <div class="mj_articleoverlay"> </div>
                             </div>
                             <div class="mj_articledata">
-                                <p>Selecciona los profesionales de interés de acuerdo a tu necesidad.</p>
+                                <p>Selecciona el aliado de interés de acuerdo a tu necesidad.</p>
                                 <a href="#"><i class="fa fa-angle-right"></i></a> </div>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                                 <div class="mj_articleoverlay"> </div>
                             </div>
                             <div class="mj_articledata">
-                                <p>Enviar una solicitud de cotización especificando el trabajo, fecha/horario, número de horas.</p>
+                                <p>Enviar una solicitud de cotización especificando el servicio, fecha/horario, número de horas.</p>
                                 <a href="#"><i class="fa fa-angle-right"></i></a> </div>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                                 <div class="mj_articleoverlay"> </div>
                             </div>
                             <div class="mj_articledata">
-                                <p>Tras recibir una aceptación del pago, esperar a la fecha acordada para el trabajo. No olvides calificar el trabajo.</p>
+                                <p>Tras recibir una aceptación del pago, esperar a la fecha acordada para  la ejecución. No olvides calificar el aliado al final de cada servicio o proyecto..</p>
                                 <a href="#"><i class="fa fa-angle-right"></i></a> </div>
                         </div>
                                 
