--- a/web/Front/Como_Funciona.xhtml
+++ b/web/Front/Como_Funciona.xhtml
@@ -13,7 +13,7 @@
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
                     <div class="mj_mainheading mj_toppadder80 mj_bottompadder50">
                         <h1>Como Funciona</h1>
-                        <p>En Metrópolis queremos que todo sea más fácil para ti, pulsa en cada uno de nuestros tutoriales para hacer de esta plataforma la herramienta idónea. </p>
+                        <p> En Metrópolis queremos que todo sea más fácil para ti, pulsa en cada uno de nuestros tutoriales para hacer de esta plataforma la herramienta idónea. </p>
                     </div>
                 </div>
             </div>
@@ -22,11 +22,11 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="mj_recent_workit text-center">
                             <div class="mj_workit_innerheader">
-                                <h4>Como buscar trabajo</h4>
+                                <h4>Como encuentro un servicio</h4>
                             </div>
                             <div class="mj_workit_info">
                                 <img src="../images/COMOTRABAJO.png" alt="" height="264" class="img-responsive" />
-                                    <p class="mj_toppadder50">En metrópolis tienes la oportunidad de encontrar propuestas de proyectos posteadas por potenciales empleadores en busca de la persona indicada para llevar a cabo esa tarea específica. </p>
+                                    <p class="mj_toppadder50">En metrópolis encontrar el aliado ideal para ese proyecto o necesidad que tienes es muy fácil no importa que tan grande o pequeño sea el trabajo aquí encontraras el indicado para realizarlo. </p>
                             </div>
                             <div class="mj_workit_innerfooter">
                                 <a href="./Como_Contratar.xhtml">leer mas...</a>
@@ -36,28 +36,28 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="mj_recent_workit text-center">
                             <div class="mj_workit_innerheader">
-                                <h4>Como contratar</h4>
+                                <h4>Como ofrecer un servicio</h4>
                             </div>
                             <div class="mj_workit_info">
                                 <img src="../images/COMOCONTRATAR.png" class="img-responsive" alt="" />
-                                    <p class="mj_toppadder50">En metrópolis contratar a un independiente o una Mipyme es muy fácil no importa que tan grande o pequeño sea el trabajo aquí encontraras el indicado para realizarlo.</p>
+                                    <p class="mj_toppadder50">En metrópolis tienes la oportunidad de ofrecer uno o varios servicios a potenciales clientes en busca de la persona indicada para llevar a cabo esa tarea específica.</p>
                             </div>
                             <div class="mj_workit_innerfooter">
-                                <a href="#">leer mas...</a>
+                                <a href="Como_Trabajar.xhtml">leer mas...</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="mj_recent_workit text-center">
                             <div class="mj_workit_innerheader">
-                                <h4>como finalizar trabajo</h4>
+                                <h4>como finalizar un proyecto</h4>
                             </div>
                             <div class="mj_workit_info">
                                 <img src="../images/FINALIZARTRABAJO.png" class="img-responsive" alt="" />
                                     <p class="mj_toppadder50">Recuerda siempre dejar un trabajo bien terminado y en los terminados con el cliente en la cotizacion, ingresa a la plataforma y finaliza en el boton indicado.</p>
                             </div>
                             <div class="mj_workit_innerfooter">
-                                <a href="#">leer mas...</a>
+                                <a href="como_terminar_servicio.xhtml">leer mas...</a>
                             </div>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                                     <p class="mj_toppadder50">Nuestra plataforma de pagos funciona por ciclos de facturacion, de esta manera estas seguro de que en una fecha estara el dinero de los trabajos realizados.</p>
                             </div>
                             <div class="mj_workit_innerfooter">
-                                <a href="#">Leer mas...</a>
+                                <a href="Como_Hacer_Un_Pago.xhtml">Leer mas...</a>
                             </div>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                                 </div>
                             </div>
                             <div class="mj_workit_innerfooter text-center">
-                                <a href="#">Leer mas...</a>
+                                
                             </div>
                         </div>
                     </div>
