--- a/web/Front/Como_Hacer_Un_Pago.xhtml
+++ b/web/Front/Como_Hacer_Un_Pago.xhtml
@@ -14,7 +14,7 @@
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
                     <div class="mj_mainheading mj_toppadder80 mj_bottompadder50">
                       <h1><strong>COMO HACER UN PAGO</strong></h1>
-                      <p>En metrópolis nos esforzamos para agilizar y de hacer de los pagos algo simple, sencillo y seguro, a continuacion.</p>
+                      <p>En metrópolis nos esforzamos para agilizar y hacer de los pagos algo simple, sencillo y seguro.</p>
                     </div>
                 </div>
             </div>
@@ -26,7 +26,7 @@
                                 <div class="mj_articleoverlay"> </div>
                             </div>
                             <div class="mj_articledata">
-                                <p>Ingresa a tu cuenta y busca en el menú desplegable la opción administrar trabajos.</p>
+                                <p>Ingresa a tu cuenta y busca en el menú desplegable la opción afiliados.</p>
                                 <a href="#"><i class="fa fa-angle-right"></i></a> </div>
           </div>
                   </div>
@@ -46,7 +46,7 @@
                                 <div class="mj_articleoverlay"> </div>
                             </div>
                             <div class="mj_articledata">
-                                <p>Selecciona la cotización del trabajo que quieres comenzar y pulsa el botón pagar.</p>
+                                <p>Selecciona la cotización del servicio que quieres contratar y pulsa detalles para pagar.</p>
                                 <a href="#"><i class="fa fa-angle-right"></i></a> </div>
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                                 <div class="mj_articleoverlay"> </div>
                             </div>
                             <div class="mj_articledata">
-                                <p>Ya está, ahora según lo acordado con el trabajador pueden comenzar la actividad pactadar.</p>
+                                <p>Ya está, ahora según lo acordado con el aliado pueden comenzar la actividad pactada.</p>
                                 <a href="#"><i class="fa fa-angle-right"></i></a> </div>
                        </div>     
                 </div>
