--- a/web/Front/Como_Trabajar.xhtml
+++ b/web/Front/Como_Trabajar.xhtml
@@ -16,7 +16,9 @@
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
                         <div class="mj_mainheading mj_toppadder80 mj_bottompadder50">
                             <h1><strong>COMO OFRECER TUS SERVICIOS</strong></h1>
-                            <p>En metrópolis tienes la oportunidad de ofrecer tus servicios de una manera fácil y así ser encontrado por potenciales empleadores en busca de la persona indicada para llevar a cabo una tarea específica...</p><br /><p>Recuerda honestidad y eficiencia es la base de una buena práctica.</p>
+                            <p>En metrópolis tienes la oportunidad de ofrecer tus servicios de una manera fácil y así ser encontrado por potenciales clientes en busca de la persona indicada para llevar a cabo una tarea específica...</p>
+                            <br /><br /><br /><br />
+                            <p>Recuerda honestidad y eficiencia es la base de una buena práctica.</p>
                         </div>
                     </div>
                 </div>
@@ -99,7 +101,7 @@
                                     <div class="mj_articleoverlay"> </div>
                             </div>
                             <div class="mj_articledata">
-                                <p>Recuerda ser honesto con tu empleador y establece condiciones si es necesario.</p>
+                                <p>Recuerda ser honesto con tu cliente y establece condiciones si es necesario.</p>
                                 <a href="#"><i class="fa fa-angle-right"></i></a> </div>
                         </div>
                     </div>
