--- a/web/Front/Signup.xhtml
+++ b/web/Front/Signup.xhtml
@@ -54,8 +54,8 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel"> Cuenta Cliente</h4>
-                        <p>Ahora podras encontrar la persona idonea, solo ingresa, busca, oferta y espera por un sin numero de posibilidades para darle solucion a esa necesidad.</p>
+                        <h4 class="modal-title" id="myModalLabel"> CUENTA CLIENTE</h4>
+                        <p>Ahora podrás encontrar la persona idónea, solo ingresa, busca, oferta y espera por un sin número de posibilidades para darle solución a esa necesidad.</p>
                     </div>
                     <div class="modal-body">
                         <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-1">
@@ -226,8 +226,8 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel1"> Cuenta Trabajador</h4>
-                        <p>a continuacion ingresa tus datos para abrir una cuenta y empezar a trabjar en esta ciudad llena de oportunidades </p>
+                        <h4 class="modal-title" id="myModalLabel1"> CUENTA ALIADO</h4>
+                        <p>a continuación, ingresa tus datos para abrir una cuenta y empezar a ofrecer tus servicios en esta ciudad llena de oportunidades. </p>
                     </div>
                     <div class="modal-body">
                         <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-1">
