--- a/web/Front/Payu_landing.xhtml
+++ b/web/Front/Payu_landing.xhtml
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-12 col-xs-12">
                 <div class="mj_error_search mj_toppadder50">
-                    <p class="mj_toppadder50 mj_bottompadder70">Volver al <a href="index.html">Home</a></p>                    
+                    <p class="mj_toppadder50 mj_bottompadder70">Volver al <a href="index.html">inicio</a></p>                    
                 </div>
             </div>
         </div>
